UX-262: set a max-width on the text to avoid it running too long

--- a/less/components/empty-state.less
+++ b/less/components/empty-state.less
@@ -23,6 +23,7 @@
   .empty-state-content {
     color: white;
     font-family: @font-family-nav;
+    max-width: 40rem;
 
     h1 {
       font-size: 2.4rem;
